<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:id="@+id/login_username"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_username"
        android:layout_alignLeft="@+id/login_username"
        android:layout_alignStart="@+id/login_username"
        android:hint="@string/password"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:id="@+id/login_login_button"
        android:layout_below="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</LinearLayout>
